--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ Author URI: http://webthemez.com/
     <link href="et-line-font/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/styles.css" />
     <link href="font/css/font-awesome.min.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="/images/gear.svg" />
   </head>
 
   <body>
