--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@ Author URI: http://webthemez.com/
     <link rel="stylesheet" href="css/styles.css" />
     <link href="font/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="shortcut icon" href="/images/gear.svg" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-HQTJE2VJTW"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag("js", new Date())
+
+      gtag("config", "G-HQTJE2VJTW")
+    </script>
   </head>
 
   <body>
